<resources>
    <string name="app_name">Foodtruck Client</string>

    <!--Alert Dialog-->
    <string name="alert_dialog_action_ok">OK</string>
    <string name="alert_dialog_action_cancel">Cancel</string>
    <string name="alert_dialog_action_dismiss">Dismiss</string>
    <string name="alert_dialog_action_remove">Remove</string>
    <string name="alert_dialog_upload_picture_title">Upload picture</string>

    <!--Permission-->
    <string name="alert_dialog_permission_denied_title">Permission request denied</string>
    <string name="alert_dialog_permission_canceled_title">Permission request canceled</string>
    <string name="alert_dialog_location_no_permission_message">Unable to show your location on the map</string>
    <string name="alert_dialog_read_storage_no_permission_message">Unable to access storage</string>
    <string name="alert_dialog_camera_no_permission_message">Unable to access camera</string>

    <!--Dashboard-->
    <string name="dashboard_toolbar_title">Dashboard</string>
    <string name="dashboard_pager_map">🗺️ Locations</string>
    <string name="dashboard_pager_list">🚚 Food trucks</string>
    <string name="menu_toggle_layout">Toggle Layout</string>
    <string name="message_location_unavailable_title">Location unavailable</string>
    <string name="message_location_unavailable_message">Unable to get current device location. Please make sure location services are turned on in the phone\'s settings.</string>

    <!--Rating count-->
    <string name="rating_count">(%d ratings)</string>
    <string name="rating_count_singular">(%d rating)</string>

    <!--Foodtruck viewer-->
    <string name="foodtruck_owner_label">Owner:</string>
    <string name="foodtruck_created_label">Created:</string>
    <string name="foodtruck_last_update_label">Last update:</string>
    <string name="foodtruck_rating_label">Rating</string>
    <string name="foodtruck_rating_not_available">N/A</string>
    <string name="foodtruck_my_review_login_hint">Please log in to post a review</string>
    <string name="foodtruck_my_review_own_foodtruck">You are not allowed to rate your own food truck</string>
    <string name="foodtruck_my_review">My Review</string>
    <string name="foodtruck_my_review_title_hint">Review title</string>
    <string name="foodtruck_my_review_content_hint">Review content</string>
    <string name="foodtruck_my_review_submit">Submit</string>
    <string name="foodtruck_my_review_edit">Edit</string>
    <string name="foodtruck_my_review_remove">Remove</string>
    <string name="foodtruck_my_review_save">Save</string>
    <string name="foodtruck_my_review_cancel">Cancel</string>
    <string name="foodtruck_my_review_submitted_message">You review was submitted</string>
    <string name="foodtruck_my_review_updated_message">Your review was updated successfully</string>
    <string name="foodtruck_my_review_removed_message">Your review was successfully removed</string>
    <string name="foodtruck_review_edited">edited</string>
    <string name="foodtruck_review_date_created_edited_pattern" translatable="false">%s (%s)</string>
    <string name="foodtruck_review_date_created_pattern" translatable="false">%s</string>
    <string name="foodtruck_removed_message">Food truck successfully removed</string>
    <string name="foodtruck_remove_dialog_title">Remove food truck</string>
    <string name="foodtruck_remove_dialog_message">Are you sure that you want to remove this food truck?</string>
    <string name="foodtruck_menu_show_on_map">Show on map</string>
    <string name="foodtruck_menu_remove_foodtruck">Remove food truck</string>

    <!--Foodtruck editor-->
    <string name="foodtruck_editor_toolbar_title_add_foodtruck">Add food truck</string>
    <string name="foodtruck_editor_toolbar_title_edit_foodtruck">Edit food truck</string>
    <string name="foodtruck_editor_name_hint">What is the food truck called?</string>
    <string name="foodtruck_editor_name_hint_edit_text">Name</string>
    <string name="foodtruck_editor_foodtypes_hint">What types of food are you selling?</string>
    <string name="foodtruck_editor_foodtypes_hint_edit_text">Food type</string>
    <string name="foodtruck_editor_location_hint">Where is the food truck currently located?</string>
    <string name="foodtruck_editor_image_hint">Let people easily recognize your food truck by uploading a photo of it.\n(optional step)</string>
    <string name="foodtruck_editor_select_image">Select</string>
    <string name="foodtruck_editor_remove_image">Remove</string>
    <string name="foodtruck_editor_foodtruck_added_message">Food truck successfully added</string>
    <string name="foodtruck_editor_foodtruck_edited_message">Food truck successfully edited</string>
    <string name="foodtruck_editor_menu_show_my_location">Show my location</string>

    <!--Authentication-->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Retype password</string>
    <string name="service_access_code_hint">Service Access Code</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_link">No account?</string>
    <string name="logged_in_message">Logged in as %s</string>
    <string name="logged_out_message">Logged out</string>
    <string name="username_available">Username available</string>
    <string name="username_unavailable">Username unavailable</string>
    <string name="registered_message">%s successfully registered</string>
    <string name="user_info_sync_failed_message">Your user account data could not be refreshed at the moment</string>
    <string name="privacy_policy_link"><u>Privacy Policy</u></string>

    <!--Profile-->
    <string name="profile_joined_date">Joined: %s</string>
    <string name="profile_upload_profile_picture">Upload profile picture</string>
    <string name="profile_remove_profile_picture">Remove profile picture</string>
    <string name="profile_dialog_item_take_photo">Take Photo</string>
    <string name="profile_dialog_item_pick_from_gallery">Pick from Gallery</string>
    <string name="profile_dialog_remove_profile_picture_title">Remove profile picture</string>
    <string name="profile_dialog_remove_profile_picture_message">Are you sure that you want to remove your profile picture?</string>

    <!--Messages-->
    <string name="message_file_size_exceeded">The selected file exceeds the size limit</string>
    <string name="message_profile_image_uploaded">Profile image uploaded</string>
    <string name="message_profile_image_removed">Profile image removed</string>

    <!--Vector Paths-->
    <string name="path_add_circle" translatable="false">M 11 7 C 11 8.333 11 9.667 11 11 C 9.667 11 8.333 11 7 11 C 7 11.667 7 12.333 7 13 C 8.333 13 9.667 13 11 13 C 11 14.333 11 15.667 11 17 C 11.667 17 12.333 17 13 17 C 13 15.667 13 14.333 13 13 C 14.333 13 15.667 13 17 13 C 17 12.333 17 11.667 17 11 C 15.667 11 14.333 11 13 11 C 13 9.667 13 8.333 13 7 C 13 7 13 7 13 7 L 11 7 M 12 2 C 10.62 2 9.305 2.28 8.109 2.786 C 6.912 3.292 5.835 4.025 4.93 4.93 C 4.025 5.835 3.292 6.912 2.786 8.109 C 2.28 9.305 2 10.62 2 12 C 2 13.38 2.28 14.695 2.786 15.891 C 3.292 17.087 4.025 18.165 4.93 19.07 C 5.835 19.975 6.912 20.707 8.109 21.214 C 9.305 21.72 10.62 22 12 22 C 13.38 22 14.695 21.72 15.891 21.214 C 17.087 20.707 18.165 19.975 19.07 19.07 C 19.975 18.165 20.707 17.087 21.214 15.891 C 21.72 14.695 22 13.38 22 12 C 22 10.62 21.72 9.305 21.214 8.109 C 20.707 6.912 19.975 5.835 19.07 4.93 C 18.165 4.025 17.087 3.292 15.891 2.786 C 14.695 2.28 13.38 2 12 2 L 12 2 M 12 20 C 7.59 20 4 16.41 4 12 C 4 7.59 7.59 4 12 4 C 16.41 4 20 7.59 20 12 C 20 16.41 16.41 20 12 20 Z</string>
    <string name="path_my_location" translatable="false">M 12 8 C 11.263 8 10.573 8.199 9.981 8.546 C 9.388 8.893 8.893 9.388 8.546 9.981 C 8.199 10.573 8 11.263 8 12 C 8 12.737 8.199 13.427 8.546 14.019 C 8.893 14.612 9.388 15.107 9.981 15.454 C 10.573 15.801 11.263 16 12 16 C 12.737 16 13.427 15.801 14.019 15.454 C 14.612 15.107 15.107 14.612 15.454 14.019 C 15.801 13.427 16 12.737 16 12 C 16 11.263 15.801 10.573 15.454 9.981 C 15.107 9.388 14.612 8.893 14.019 8.546 C 13.427 8.199 12.737 8 12 8 L 12 8 M 11 1 C 11 1.687 11 2.373 11 3.06 C 6.83 3.52 3.52 6.83 3.06 11 C 2.373 11 1.687 11 1 11 C 1 11.667 1 12.333 1 13 C 1.687 13 2.373 13 3.06 13 C 3.52 17.17 6.83 20.48 11 20.94 C 11 21.627 11 22.313 11 23 C 11.667 23 12.333 23 13 23 C 13 22.313 13 21.627 13 20.94 C 17.17 20.48 20.48 17.17 20.94 13 C 21.627 13 22.313 13 23 13 C 23 12.333 23 11.667 23 11 C 22.313 11 21.627 11 20.94 11 C 20.94 11 20.94 11 20.94 11 C 20.48 6.83 17.17 3.52 13 3.06 C 13 2.373 13 1.687 13 1 L 11 1 M 12 19 C 8.13 19 5 15.87 5 12 C 5 8.13 8.13 5 12 5 C 15.87 5 19 8.13 19 12 C 19 15.87 15.87 19 12 19 Z</string>

    <!--Nav Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_login_hint">Please login to access all features</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Nav Drawer Menu-->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_group_authentication">Authentication</string>
    <string name="menu_group_about">About</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_project_page">Project Page</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
</resources>
