<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_my_profile" />
    </group>

    <item android:title="@string/menu_group_authentication">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/nav_register"
                android:title="@string/menu_register" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
