<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/layout_toolbar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/register_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="false">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_layout_margin"
                android:layout_marginBottom="@dimen/general_layout_margin"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_text_view_username_availability"
                    android:layout_gravity="center_horizontal"
                    tools:text="Username available"
                    android:textColor="@color/colorGreen"
                    android:visibility="invisible"
                    tools:visibility="visible"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_text_input_layout_username"
                    android:layout_width="@dimen/register_content_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/general_layout_margin"
                    android:layout_marginLeft="@dimen/general_layout_margin"
                    android:layout_marginTop="@dimen/general_layout_margin"
                    android:layout_marginEnd="@dimen/general_layout_margin"
                    android:layout_marginRight="@dimen/general_layout_margin"
                    android:layout_marginBottom="@dimen/general_layout_margin">

                    <EditText
                        android:id="@+id/register_edit_text_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/username_hint"
                        android:hint="@string/username_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:maxLength="50"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_text_input_layout_password"
                    android:layout_width="@dimen/register_content_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/general_layout_margin"
                    android:layout_marginLeft="@dimen/general_layout_margin"
                    android:layout_marginEnd="@dimen/general_layout_margin"
                    android:layout_marginRight="@dimen/general_layout_margin"
                    android:layout_marginBottom="@dimen/general_layout_margin">

                    <EditText
                        android:id="@+id/register_edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/password_hint"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_text_input_layout_password_retype"
                    android:layout_width="@dimen/register_content_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/general_layout_margin"
                    android:layout_marginLeft="@dimen/general_layout_margin"
                    android:layout_marginEnd="@dimen/general_layout_margin"
                    android:layout_marginRight="@dimen/general_layout_margin"
                    android:layout_marginBottom="@dimen/general_layout_margin">

                    <EditText
                        android:id="@+id/register_edit_text_password_retype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/retype_password_hint"
                        android:hint="@string/retype_password_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_text_input_layout_service_access_code"
                    android:layout_width="@dimen/register_content_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/general_layout_margin"
                    android:layout_marginLeft="@dimen/general_layout_margin"
                    android:layout_marginTop="@dimen/general_layout_margin"
                    android:layout_marginEnd="@dimen/general_layout_margin"
                    android:layout_marginRight="@dimen/general_layout_margin"
                    android:layout_marginBottom="@dimen/general_layout_margin">

                    <EditText
                        android:id="@+id/register_edit_text_service_access_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/service_access_code_hint"
                        android:hint="@string/service_access_code_hint"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/register_button_register"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/general_layout_margin"
                    android:layout_marginLeft="@dimen/general_layout_margin"
                    android:layout_marginTop="@dimen/register_button_margin_top"
                    android:layout_marginEnd="@dimen/general_layout_margin"
                    android:layout_marginRight="@dimen/general_layout_margin"
                    android:enabled="false"
                    android:text="@string/register" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/privacy_policy_text_view"
                    android:text="@string/privacy_policy_link"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>