<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/layout_toolbar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/login_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_layout_margin"
                android:layout_marginBottom="@dimen/general_layout_margin"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_text_input_layout_username"
                    android:layout_width="@dimen/login_content_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/general_layout_margin"
                    android:layout_marginLeft="@dimen/general_layout_margin"
                    android:layout_marginTop="@dimen/general_layout_margin"
                    android:layout_marginEnd="@dimen/general_layout_margin"
                    android:layout_marginRight="@dimen/general_layout_margin"
                    android:layout_marginBottom="@dimen/general_layout_margin">

                    <EditText
                        android:id="@+id/login_edit_text_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/username_hint"
                        android:hint="@string/username_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:maxLength="50"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_text_input_layout_password"
                    android:layout_width="@dimen/login_content_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/general_layout_margin"
                    android:layout_marginLeft="@dimen/general_layout_margin"
                    android:layout_marginEnd="@dimen/general_layout_margin"
                    android:layout_marginRight="@dimen/general_layout_margin"
                    android:layout_marginBottom="@dimen/general_layout_margin">

                    <EditText
                        android:id="@+id/login_edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/password_hint"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login_button_login"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/general_layout_margin"
                    android:layout_marginLeft="@dimen/general_layout_margin"
                    android:layout_marginTop="@dimen/login_button_margin_top"
                    android:layout_marginEnd="@dimen/general_layout_margin"
                    android:layout_marginRight="@dimen/general_layout_margin"
                    android:enabled="false"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/login_button_register_link"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/general_layout_margin"
                    android:layout_marginLeft="@dimen/general_layout_margin"
                    android:layout_marginTop="@dimen/general_layout_margin"
                    android:layout_marginEnd="@dimen/general_layout_margin"
                    android:layout_marginRight="@dimen/general_layout_margin"
                    android:layout_marginBottom="@dimen/general_layout_margin"
                    android:text="@string/register_link" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>